# Pombo-voucher

./: .gitignore  README.md  pyproject.toml
config/: generate_artificial_dataset.yaml  train_LSTM.yaml  train_MLP.yaml  train_RNN.yaml
notebooks/: model_training.ipynb
oligo_seq/database/: __init__.py  database.py
oligo_seq/models/: __init__.py  models.py
oligo_seq/pipelines/: generate_artificial_dataset.py  test.py  train_model.py
tests/: test_recurrent.py
